--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Bookstore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
